optimised button design

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       </div>
       <div class="button-container">
         <div id="headphone-icon" class="button"><i class="fas fa-headphones-simple"></i></div>
-        <div class="button" id="btn-left"><i class="fas fa-arrow-left"></i></div>
+        <div class="button arrow" id="btn-left"><i class="fas fa-arrow-left"></i></div>
         <div class="updown-button">
-          <div class="button" id="btn-up"><i class="fas fa-arrow-up"></i></div>
-          <div class="button" id="btn-down"><i class="fas fa-arrow-down"></i></div>
+          <div class="button arrow" id="btn-up"><i class="fas fa-arrow-up"></i></div>
+          <div class="button arrow" id="btn-down"><i class="fas fa-arrow-down"></i></div>
         </div>
-        <div class="button" id="btn-right"><i class="fas fa-arrow-right"></i></div>
+        <div class="button arrow" id="btn-right"><i class="fas fa-arrow-right"></i></div>
         <div class="pauseplay-button">
           <div class="button" id="btn-play"><i class="fas fa-play"></i></div>
           <div class="button" id="btn-pause"><i class="fas fa-pause"></i></div>
